--- a/about/index.html
+++ b/about/index.html
@@ -3,4 +3,4 @@ layout: default
 title: About me
 ---
 a programer,music lover,running fan,photograph amateur.
-right now workding and living in chengdu.
+Workding and living in chengdu currently.
