--- a/about/index.html
+++ b/about/index.html
@@ -3,4 +3,5 @@ layout: default
 title: About me
 ---
 a programer,music lover,running fan,photograph amateur.
-Workding and living in chengdu currently.
+
+Working and living in chengdu currently.
